updates to seed

--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -9,7 +9,7 @@
     "lint": "echo Lint"
   },
   "dependencies": {
-    "lilyjs": "latest"
+    "lily": "latest"
   },
   "devDependencies": {
     "corgy": "latest",
