--- a/packages/lyex/package.json
+++ b/packages/lyex/package.json
@@ -1,10 +1,19 @@
 {
   "name": "lyex",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lyex.js",
+  "min": "dist/lyex.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run dev",
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
+  },
+  "devDependencies": {
+    "rollup": "^0.68.2",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-serve": "^1.0.0",
+    "rollup-plugin-uglify-es": "0.0.1"
   },
   "keywords": [],
   "author": "",
