--- a/packages/lily/package.json
+++ b/packages/lily/package.json
@@ -1,19 +1,10 @@
 {
   "name": "lily",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "",
-  "main": "dist/lily.js",
-  "min": "dist/lily.min.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "npm run dev",
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
-  },
-  "devDependencies": {
-    "rollup": "^0.68.2",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-serve": "^1.0.0",
-    "rollup-plugin-uglify-es": "0.0.1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/imlinus/lily/issues"
   },
-  "homepage": "https://github.com/imlinus/lily#readme"
+  "homepage": "https://github.com/imlinus/lily#readme",
+  "devDependencies": {
+    "kyparn": "^0.1.0"
+  }
 }
