--- a/packages/lyex/package.json
+++ b/packages/lyex/package.json
@@ -1,20 +1,8 @@
 {
   "name": "lyex",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "description": "",
-  "main": "dist/lyex.js",
-  "min": "dist/lyex.min.js",
-  "scripts": {
-    "start": "npm run dev",
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
-  },
-  "devDependencies": {
-    "rollup": "^0.68.2",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-serve": "^1.0.0",
-    "rollup-plugin-uglify-es": "0.0.1"
-  },
+  "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
