--- a/packages/lily/package.json
+++ b/packages/lily/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lily",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js"
   },
